# xmr402

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conda.yml  env.sh
sample/: README.md
sample/api/: data.json  service.py
sample/static/: index.html
src/: main.cpp  validate.cpp  validate.h
